syntax = "proto3";


package io.oxia.okk.proto.v1;

option go_package = "github.com/oxia-db/okk/proto";
option java_multiple_files = true;


message OperationSessionRestart {}
message OperationPut {
  string key = 1;
  bytes value = 2;

  bool ephemeral = 3;
  optional string partition_key = 4;
  repeated uint64 sequence_key_delta = 5;
}

enum KeyComparisonType {
  EQUAL = 0;
  FLOOR = 1;
  CEILING = 2;
  LOWER = 3;
  HIGHER = 4;
}
message OperationGet {
  string key = 1;
  KeyComparisonType comparison_type = 2;
}
message OperationList {
  string key_start = 1;
  string key_end = 2;
}
message OperationScan {
  string key_start = 1;
  string key_end = 2;
}
message OperationDelete {
  string key = 1;
}
message OperationDeleteRange {
  string key_start = 1;
  string key_end = 2;
}

message Operation {
  int64 sequence = 1;
  optional Assertion assertion = 2;
  optional Precondition precondition = 3;
  oneof operation  {
    OperationPut put = 4;
    OperationDelete delete = 5;
    OperationGet get = 6;
    OperationList list = 7;
    OperationScan scan = 8;
    OperationSessionRestart session_restart = 9;
    OperationDeleteRange delete_range = 10;
  }


  int64 timestamp = 100;
}

message Precondition {
  optional bool watch_notification = 1;
  optional bool bypass_if_assert_key_exist = 2;
}

enum NotificationType {
  KEY_CREATED = 0;
  KEY_MODIFIED = 1;
  KEY_DELETED = 2;
  KEY_RANGE_DELETED = 3;
}

message Notification {
  NotificationType type = 1;
  optional string key = 2;
  optional string key_start = 3;
  optional string key_end = 4;
}

message Record {
  string key = 1;
  bytes value = 2;
}

message Assertion {
  optional bool eventually_empty = 1;
  optional bool empty_records = 2;
  optional string partition_key = 3;
  repeated Record records = 4;
  optional Notification notification = 5;
}

message ExecuteCommand {
  string testcase = 1;
  Operation operation = 2;
}

enum Status {
  Ok = 0;
  AssertionFailure = 1;
  RetryableFailure = 2;
  NonRetryableFailure = 3;
}

message ExecuteResponse {
  Status status = 1;
  string status_info = 2;
}

service Okk {
  rpc Execute(stream ExecuteCommand) returns (stream ExecuteResponse);
}